--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=eureka
 server.port=8761
-# eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-# eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.instance.hostname=spring-boot-eureka-server-davesmith921016-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
+eureka.instance.lease-renewal-interval-in-seconds=1
+eureka.instance.lease-expiration-duration-in-seconds=3
+eureka.client.service-url.defaultZone=https://${eureka.instance.hostname}/eureka/
